--- a/style.css
+++ b/style.css
@@ -502,7 +502,7 @@ header.sticky ul li a{
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: auto auto auto;
     }
-    .hero-card, .small-card, .tu1ahorro-card, .tu1estilo-card{
+    .hero-card, .small-card, .tu1ahorro-card, .tu1estilo-card, .testimonial-card{
         flex-direction: column;
         grid-column-start: span 4;
         grid-column-end: span 4;
@@ -563,7 +563,6 @@ header.sticky ul li a{
         position: absolute;
         width: 3.75rem;
         height: 3.75rem;
-        top: 1rem;
         right: 2rem;
         transition-duration: 0.5s;
       }
