--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ header.sticky ul li a{
     object-fit: cover;
     width: calc(400%/4);
 }
-.slider-indicator{
+.slider-indicator, .dots{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -529,41 +529,35 @@ header.sticky ul li a{
     
 }
   
-  .slides {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-  }
-  
-  .slides img {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .dots {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-  }
-  
-  .dot {
-    display: inline-block;
-    background: rgba(0, 0, 0, 0.3);
-    height: 5px;
-    width: 4rem;
-    border-radius: 100px;
-    position: relative;
-    cursor: pointer;
-    margin: 0 3px 0.5em;
-    transition: background-color .1s, color .1s;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    -ms-border-radius: 100px;
-    -o-border-radius: 100px;
-  }
-  
-  .dot.active {
-    background-color: white;
-  }
+.slides {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slides img {
+  width: 100%;
+  height: 100%;
+}
+
+.dot {
+  display: inline-block;
+  background: rgba(0, 0, 0, 0.3);
+  height: 5px;
+  width: 4rem;
+  border-radius: 100px;
+  position: relative;
+  cursor: pointer;
+  margin: 0 3px 0.5em;
+  transition: background-color .1s, color .1s;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
+}
+
+.dot.active {
+  background-color: white;
+}
   
 
 /* MEDIA QUERIES  */
