--- a/style.css
+++ b/style.css
@@ -438,11 +438,11 @@ header.sticky ul li a{
     object-fit: cover;
     height: auto;
     margin-top: 1.5rem;
-    border-radius: 1rem;
-    -webkit-border-radius: 1rem;
-    -moz-border-radius: 1rem;
-    -ms-border-radius: 1rem;
-    -o-border-radius: 1rem;
+    border-radius: .75rem;
+    -webkit-border-radius: .75rem;
+    -moz-border-radius: .75rem;
+    -ms-border-radius: .75rem;
+    -o-border-radius: .75rem;
 }
 .article-content-wrapper {
     position: relative;
@@ -573,18 +573,30 @@ header.sticky ul li a{
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: auto auto auto;
     }
-    .hero-card, .small-card, .tu1ahorro-card, .tu1estilo-card, .testimonial-card{
+    .hero-card, .small-card, .tu1ahorro-card, .testimonial-card{
         flex-direction: column;
         grid-column-start: span 4;
         grid-column-end: span 4;
         grid-row-start: span 1;
         grid-row-end: span 1;   
     }
+    .tu1estilo-card{
+        grid-column-start: span 4;
+        grid-column-end: span 4;
+        grid-row-start: span 2;
+        grid-row-end: span 2;
+    }
     .hero-right{
         grid-column-start: span 4;
     }
     .hero-image{
         width: 85%;
+    }
+    .tu1estilo-image{
+        top: 0;
+    }
+    .work-frame-wide{
+        justify-content: flex-end;
     }
     .work-title-wrap, .work-title-wrap-2{
         width: 100%;
@@ -701,5 +713,6 @@ header.sticky ul li a{
         -moz-border-radius: 1rem;
         -ms-border-radius: 1rem;
         -o-border-radius: 1rem;
+    }
 }
-}
+
