--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ header.sticky ul li a{
     grid-column-end: span 1;
     grid-row-start: span 2;
     grid-row-end: span 2;
-    background-color: #40c2a6;
+    background-color: #E2BB5D;
     border-radius: 1rem;
     -webkit-border-radius: 1rem;
     -moz-border-radius: 1rem;
@@ -490,23 +490,26 @@ header.sticky ul li a{
     max-width: 1600px;
 }
 .hero-about{
-    grid-gap: 25px;
+    grid-gap: 2rem;
     grid-template-columns: repeat(2,1fr);
     display: grid;
     /* grid-gap: 3rem; */
 }
-.hero-column{
+.hero-column, .hero-column-right{
     display: flex;
     flex-direction: column;
     position: relative;
-    justify-content: space-around;
+    justify-content: space-between;
 }
-.hero-column h1{
+.hero-column-right{
+    padding: 3rem;
+}
+.hero-column-right h1{
     font-size: calc(40px + 4vw)!important;
     line-height: 1.2;
 }
-.hero-column p{
-    width: 82%;
+.hero-column-right p{
+    width: 90%;
 }
 .hero-custom{
     overflow: hidden;
@@ -517,7 +520,7 @@ header.sticky ul li a{
     -o-border-radius: 2rem;
 }
 .wrapper-list{
-    font-size: 2rem; font-weight: 600;
+    font-size: 2rem; font-weight: 700;
     line-height: 1.20;
     margin-bottom: 1rem;
 }
@@ -525,14 +528,20 @@ header.sticky ul li a{
 .carousel {
     position: relative;
     width: 100%;
+    height: 100%;
     max-width: 800px;
     margin: 0 auto;
     overflow: hidden;
-    
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
 }
   
 .slides {
   display: flex;
+  height: 100%;
   transition: transform 0.5s ease-in-out;
 }
 
