--- a/style.css
+++ b/style.css
@@ -539,6 +539,8 @@ header.sticky ul li a{
     font-size: 2rem; font-weight: 700;
     line-height: 1.20;
     margin-bottom: 1rem;
+    margin-left: 2.75rem;
+    list-style-type: "👉";
 }
 
 .carousel {
