--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ header ul li{
 }
 header ul li a{
     position: relative;
+    height: 1.5rem;
+    display: block;
+    text-transform: uppercase;
+    overflow: hidden;
     font-weight: 500;
     margin: 0 15px;
     color: #121517;
@@ -74,6 +78,30 @@ header ul li a{
 }
 header.sticky ul li a{
     color: #121517;
+}
+ul li a span{
+    width: 100%;
+    height: 100%;
+    display: block;
+    transition: .5s transform cubic-bezier(.55,0,.1,1);
+    -webkit-transition: .5s transform cubic-bezier(.55,0,.1,1);
+    -moz-transition: .5s transform cubic-bezier(.55,0,.1,1);
+    -ms-transition: .5s transform cubic-bezier(.55,0,.1,1);
+    -o-transition: .5s transform cubic-bezier(.55,0,.1,1);
+}
+ul li:hover a span:nth-child(1){
+    transform: translateY(-100%);
+    -webkit-transform: translateY(-100%);
+    -moz-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    -o-transform: translateY(-100%);
+}
+ul li:hover a span:nth-child(2){
+    transform: translateY(-100%);
+    -webkit-transform: translateY(-100%);
+    -moz-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    -o-transform: translateY(-100%);
 }
 /* Main */
 .page-grid {
