--- a/style.css
+++ b/style.css
@@ -349,19 +349,26 @@ ul li:hover a span:nth-child(2){
     border: none;
     padding: 1rem 2rem;
     margin-top: 1rem;
+    border: 2px solid #121517;
     background-color: #121517;
     color: white;
+    font-weight: 500; font-size: 1rem;
     border-radius: 2rem;
     -webkit-border-radius: 32px;
     -moz-border-radius: 32px;
     -ms-border-radius: 32px;
     -o-border-radius: 32px;
 }
+.btn-primary:hover{
+    background-color: transparent;
+    border: 2px solid #121517;
+    color: #121517;
+    font-weight: 600;
+}
 .button-external-site {
     z-index: 1000;
     font-size: 1rem; font-weight: 600; text-transform: uppercase;
     padding: .75rem 1.4rem;
-    margin-top: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -463,6 +470,7 @@ ul li:hover a span:nth-child(2){
     padding: 3rem;
     position: relative;
     background-color: #7380ec;
+    overflow: hidden;
     border-radius: 1rem;
     -webkit-border-radius: 1rem;
     -moz-border-radius: 1rem;
@@ -473,21 +481,48 @@ ul li:hover a span:nth-child(2){
     position: relative;
     z-index: 100;
     display: flex;
-    width: 64%;
+    width: 71%;
     flex-direction: column;
     align-items: flex-start;
 
 }
+.work-title-wrap-2 h2{
+    font-size: 1.625rem;
+    margin-bottom: 0.5rem;
+}
+.work-title-wrap-2 p, .work-title-wrap p{
+    margin-bottom: 8px;
+}
 .tu1ahorro-image{
+    position: absolute;
+    left: 0;
+    bottom: 0;
     max-width: 100%;
     object-fit: cover;
     height: auto;
     margin-top: 1.5rem;
-    border-radius: .75rem;
-    -webkit-border-radius: .75rem;
-    -moz-border-radius: .75rem;
-    -ms-border-radius: .75rem;
-    -o-border-radius: .75rem;
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    transform: translateY(0%);
+    -webkit-transform: translateY(0%);
+    -moz-transform: translateY(0%);
+    -ms-transform: translateY(0%);
+    -o-transform: translateY(0%);
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    -ms-transition: all .5s ease;
+    -o-transition: all .5s ease;
+}
+.tu1ahorro-image:hover{
+    transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    -o-transform: scale(1.05);
 }
 .article-content-wrapper {
     position: relative;
@@ -642,6 +677,9 @@ ul li:hover a span:nth-child(2){
     -o-transform: scale(1.05);
 }
 .card-content{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     padding: 3rem;
     background: linear-gradient(360deg, rgba(42, 42, 42, 0.6) 35%, rgba(255,255,255,0) 100%);
     transform: translateY(58%);
@@ -659,8 +697,9 @@ ul li:hover a span:nth-child(2){
 .card-title{
     position: relative;
     width: max-content;
-    margin: 1.25rem 0;
+    margin-bottom: 1.25rem;
     font-size: 1.625rem;
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.15);
 }
 .card-title::after{
     content: "";
@@ -698,12 +737,14 @@ ul li:hover a span:nth-child(2){
 }
 .card-body{
     color: rgba(255, 255, 255, .95);
-    margin: 1rem 0;
+    margin-bottom: .75rem;
+    width: 64%;
 }
 .card-bottom{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 65%;
 }
 .d-flex{
     display: flex;
@@ -714,7 +755,7 @@ ul li:hover a span:nth-child(2){
     font-size: 1.5rem;
     margin-left: 5px;
     color: #121517;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.2);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -807,7 +848,7 @@ ul li:hover a span:nth-child(2){
         -moz-transform: translateY(63%);
         -ms-transform: translateY(63%);
         -o-transform: translateY(63%);
-}
+    }
     .hero-right{
         grid-column-start: span 4;
     }
@@ -944,6 +985,9 @@ ul li:hover a span:nth-child(2){
     }
     .wrapper{
         margin-top: 1rem;
+    }
+    .testimonial-card{
+        min-height: 37rem;
     }
 }
 
