--- a/style.css
+++ b/style.css
@@ -681,7 +681,7 @@ ul li:hover a span:nth-child(2){
     flex-direction: column;
     align-items: flex-start;
     padding: 3rem;
-    background: linear-gradient(360deg, rgba(42, 42, 42, 0.6) 35%, rgba(255,255,255,0) 100%);
+    background: linear-gradient(360deg, rgb(51 51 51 / 50%) 35%, rgba(255,255,255,0) 100%);
     transform: translateY(58%);
     -webkit-transform: translateY(58%);
     -moz-transform: translateY(58%);
