--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ ul li:hover a span:nth-child(2){
     z-index: 100;
     display: flex;
     width: 25%;
+    gap: .5rem;
     flex-direction: column;
     align-items: flex-start;
     align-self: flex-start;
@@ -208,13 +209,12 @@ ul li:hover a span:nth-child(2){
 .work-title-wrap h2{
     font-size: 1.625rem; font-weight: 700;
     line-height: 2rem;
-    margin-bottom: .75rem;
+    margin-bottom: .25rem;
 }
 .work-tag {
     font-size: 10px; font-weight: 600; letter-spacing: 1px; text-transform: uppercase;
     display: flex;
     height: 21px;
-    margin-bottom: 8px;
     padding-right: 8px;
     padding-left: 8px;
     justify-content: center;
@@ -313,6 +313,7 @@ ul li:hover a span:nth-child(2){
     position: relative;
     grid-column-start: span 4;
     grid-column-end: span 4;
+    gap: 1rem;
     display: flex;
     flex-direction: column;
     padding-right: 2rem;
@@ -326,11 +327,14 @@ ul li:hover a span:nth-child(2){
     -ms-border-radius: 1rem;
     -o-border-radius: 1rem;
 }
+.contact-card h1{
+    font-size: 2.25rem;
+    text-decoration: underline;
+}
 .contact-block{
     width: 15rem;
     display: flex;
     justify-content: space-between;
-    margin-top: 1rem;
 }
 .contact-block h5{
     font-size: .88rem;
@@ -348,8 +352,9 @@ ul li:hover a span:nth-child(2){
 .btn-primary{
     cursor: pointer;
     border: none;
-    padding: 1rem 2rem;
+    padding: .9375rem 1.9375rem;
     margin-top: 1rem;
+    text-transform: uppercase;
     border: 2px solid #121517;
     background-color: #121517;
     color: white;
@@ -413,37 +418,14 @@ ul li:hover a span:nth-child(2){
     -o-border-radius: 1rem;
  
 }
-.small-card h2 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-}
 
-.skills-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.skills-list li {
-    cursor: default;
-    font-size: 1rem;
-    display: inline-block;
-    margin: 5px;
-    padding: 10px 20px;
-    background-color: #edeef0;
-    color: #3c3e41;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-}
 .tu1ahorro-card{
     grid-row-start: span 2;
     grid-row-end: span 2;
     grid-column-start: span 2;
     grid-column-end: span 2;
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: stretch;
     /* background-color: #ff8089; */
@@ -482,26 +464,24 @@ ul li:hover a span:nth-child(2){
     position: relative;
     z-index: 100;
     display: flex;
-    width: 71%;
+    width: 100%;
+    gap: .5rem;
     flex-direction: column;
     align-items: flex-start;
 
 }
 .work-title-wrap-2 h2{
     font-size: 1.625rem;
-    margin-bottom: 0.5rem;
     line-height: 2rem;
 }
-.work-title-wrap-2 p, .work-title-wrap p{
-    margin-bottom: 8px;
-}
+
 .tu1ahorro-image{
     position: absolute;
     left: 0;
     bottom: 0;
     max-width: 100%;
+    height: 100%;
     object-fit: cover;
-    height: auto;
     border-radius: 1rem;
     -webkit-border-radius: 1rem;
     -moz-border-radius: 1rem;
@@ -524,17 +504,6 @@ ul li:hover a span:nth-child(2){
     -moz-transform: scale(1.05);
     -ms-transform: scale(1.05);
     -o-transform: scale(1.05);
-}
-.article-content-wrapper {
-    position: relative;
-    z-index: 1;
-    display: flex;
-    overflow: hidden;
-    height: 100%;
-    padding-right: 39%;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
 }
 
 #progress {
@@ -659,93 +628,11 @@ ul li:hover a span:nth-child(2){
   background-color: white;
 }
 
-.card{
-    padding: 32rem 0 0;
-    background-image: url(/images/Floating\ Ipad\ y\ Iphone.jpg);
-    background-position: center;
-    background-size: cover;
-    transition: all 0.5s ease;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-}
-.card:hover{
-    transform: scale(1.05);
-    -webkit-transform: scale(1.05);
-    -moz-transform: scale(1.05);
-    -ms-transform: scale(1.05);
-    -o-transform: scale(1.05);
-}
-.card-content{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 3rem;
-    background: linear-gradient(360deg, rgb(51 51 51 / 50%) 35%, rgba(255,255,255,0) 100%);
-    transform: translateY(58%);
-    -webkit-transform: translateY(58%);
-    -moz-transform: translateY(58%);
-    -ms-transform: translateY(58%);
-    -o-transform: translateY(58%);
-    transition: all .5s ease;
-    -webkit-transition: all .5s ease;
-    -moz-transition: all .5s ease;
-    -ms-transition: all .5s ease;
-    -o-transition: all .5s ease;
-    transition-delay: .2s;
-}
-.card-title{
-    position: relative;
-    width: max-content;
-    margin-bottom: 1.25rem;
-    font-size: 1.625rem;
-    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.15);
-}
-.card-title::after{
-    content: "";
-    position: absolute;
-    height: 4px;
-    width: calc(100% + 3rem);
-    left: calc(3rem * -1);
-    bottom: 0;
-    background-color: #E2BB5D;
-    transform: scaleX(0);
-    -webkit-transform: scaleX(0);
-    -moz-transform: scaleX(0);
-    -ms-transform: scaleX(0);
-    -o-transform: scaleX(0);
-    transition: all .5s ease;
-    -webkit-transition: all .5s ease;
-    -moz-transition: all .5s ease;
-    -ms-transition: all .5s ease;
-    -o-transition: all .5s ease;
-    transform-origin: left;
-}
-.tu1ahorro-card:hover .card-title::after{
-    transform: scaleX(1);
-    -webkit-transform: scaleX(1);
-    -moz-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    -o-transform: scaleX(1);
-}
-.tu1ahorro-card:hover .card-content{
-    transform: translateY(0);
-    -webkit-transform: translateY(0);
-    -moz-transform: translateY(0);
-    -ms-transform: translateY(0);
-    -o-transform: translateY(0);
-}
-.card-body{
-    color: rgba(255, 255, 255, .95);
-    margin-bottom: .75rem;
-    width: 64%;
-}
 .card-bottom{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 65%;
+    width: 100%;
 }
 .d-flex{
     display: flex;
@@ -839,17 +726,6 @@ ul li:hover a span:nth-child(2){
     .hero-content, .small-card, .testimonial-card, .work-frame-wide{
         padding: 2.75rem;
     }
-    .card{
-        padding: 18rem 0 0;
-    }
-    .card-content{
-        padding: 2.75rem;
-        transform: translateY(63%);
-        -webkit-transform: translateY(63%);
-        -moz-transform: translateY(63%);
-        -ms-transform: translateY(63%);
-        -o-transform: translateY(63%);
-    }
     .hero-right{
         grid-column-start: span 4;
     }
@@ -864,9 +740,6 @@ ul li:hover a span:nth-child(2){
     }
     .work-title-wrap, .work-title-wrap-2{
         width: 100%;
-    }
-    .article-content-wrapper{
-        padding-right: 0;
     }
     .slider-dot:hover{
         background-color: white;
@@ -994,8 +867,6 @@ ul li:hover a span:nth-child(2){
     .testimonial-card{
         min-height: 38rem;
     }
-    .card-body{
-        width: 100%;
-    }
+    
 }
 
