--- a/style.css
+++ b/style.css
@@ -585,6 +585,7 @@ ul li:hover a span:nth-child(2) {
   padding: 3rem;
   background-color: white;
   gap: 0.5rem;
+  max-height: 90vh;
   border-radius: 1rem;
   -webkit-border-radius: 1rem;
   -moz-border-radius: 1rem;
@@ -766,6 +767,12 @@ ul li:hover a span:nth-child(2) {
 }
 
 /* MEDIA QUERIES  */
+@media screen and (min-width: 1920px){
+  .hero-column-right h1 {
+    font-size: calc(40px + 3vw) !important;
+    line-height: 1.2;
+  }
+}
 @media screen and (max-width: 767px) {
   .page-grid {
     width: 90%;
