--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+  --swiper-theme-color: #e97446 !important;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,16 +13,19 @@
   -webkit-font-smoothing: antialiased;
   scroll-behavior: smooth;
 }
+
 body {
   background-color: #edeef0;
   color: #121517;
   min-height: 200vh;
 }
+
 img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
 header {
   position: fixed;
   top: 0;
@@ -35,11 +42,13 @@ header {
   padding: 1.5rem 3rem;
   z-index: 500;
 }
+
 header.sticky {
   padding: 0.75rem 3rem;
   background-color: white;
   box-shadow: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
 }
+
 header .logo {
   position: relative;
   z-index: 501;
@@ -54,15 +63,18 @@ header .logo {
   -ms-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
 }
+
 header ul {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 header ul li {
   position: relative;
 }
+
 header ul li a {
   position: relative;
   height: 1.5rem;
@@ -78,9 +90,11 @@ header ul li a {
   -ms-transition: all 0.5 ease;
   -o-transition: all 0.5 ease;
 }
+
 header.sticky ul li a {
   color: #121517;
 }
+
 ul li a span {
   width: 100%;
   height: 100%;
@@ -91,6 +105,7 @@ ul li a span {
   -ms-transition: 0.5s transform cubic-bezier(0.55, 0, 0.1, 1);
   -o-transition: 0.5s transform cubic-bezier(0.55, 0, 0.1, 1);
 }
+
 ul li:hover a span:nth-child(1) {
   transform: translateY(-100%);
   -webkit-transform: translateY(-100%);
@@ -98,6 +113,7 @@ ul li:hover a span:nth-child(1) {
   -ms-transform: translateY(-100%);
   -o-transform: translateY(-100%);
 }
+
 ul li:hover a span:nth-child(2) {
   transform: translateY(-100%);
   -webkit-transform: translateY(-100%);
@@ -105,6 +121,7 @@ ul li:hover a span:nth-child(2) {
   -ms-transform: translateY(-100%);
   -o-transform: translateY(-100%);
 }
+
 /* Main */
 .page-grid {
   display: grid;
@@ -112,17 +129,15 @@ ul li:hover a span:nth-child(2) {
   max-width: 1600px;
   margin: 6.25rem auto;
   grid-auto-columns: 1fr;
-  grid-auto-rows: minmax(328px, max-content);
-  grid-column-gap: 32px;
-  grid-row-gap: 32px;
+  grid-auto-rows: minmax(20.5rem, max-content);
+  gap: 2rem;
   -ms-grid-columns: minmax(260px, 1fr) 1fr 1fr minmax(220px, 1fr);
   grid-template-columns: minmax(260px, 1fr) 1fr 1fr minmax(220px, 1fr);
   -ms-grid-rows: minmax(328px, auto) minmax(328px, auto) minmax(328px, auto);
-  grid-template-rows: minmax(328px, auto) minmax(328px, auto) minmax(
-      328px,
-      auto
-    );
+  grid-template-rows: minmax(328px, auto) minmax(328px, auto) minmax(328px,
+      auto);
 }
+
 /* Hero */
 .hero-card {
   display: flex;
@@ -130,25 +145,26 @@ ul li:hover a span:nth-child(2) {
   flex-direction: row;
   align-items: stretch;
   background-color: #d2d4da;
-  grid-column-start: span 3;
-  grid-column-end: span 3;
-  grid-row-start: span 2;
-  grid-row-end: span 2;
+  grid-column: span 3;
+  grid-row: span 2;
   border-radius: 1rem;
   -webkit-border-radius: 1rem;
   -moz-border-radius: 1rem;
   -ms-border-radius: 1rem;
   -o-border-radius: 1rem;
 }
+
 .hero-image {
   display: flex;
   width: 50%;
   flex: 0 0 auto;
 }
+
 .hero-image img {
   max-width: 100%;
   object-fit: cover;
 }
+
 .hero-content {
   display: flex;
   padding: 3.5rem;
@@ -156,44 +172,49 @@ ul li:hover a span:nth-child(2) {
   justify-content: space-between;
   flex: 1;
 }
+
 .hero-info {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: .5rem;
+  margin-bottom: .5rem;
 }
+
 .hero-right {
   display: flex;
   height: 100%;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  grid-column-start: span 1;
-  grid-column-end: span 1;
-  grid-row-start: span 2;
-  grid-row-end: span 2;
-  background-color: #e2bb5d;
+  grid-column: span 1;
+  grid-row: span 2;
+  overflow: hidden;
   border-radius: 1rem;
   -webkit-border-radius: 1rem;
   -moz-border-radius: 1rem;
   -ms-border-radius: 1rem;
   -o-border-radius: 1rem;
 }
+
+.slider-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
 /* Skills */
 .skills {
   display: flex;
   flex-wrap: wrap;
   gap: 0.875rem;
 }
+
 .skills-icon {
   width: 3rem;
   height: 3rem;
 }
+
 /* Works */
 .tu1estilo-card {
-  grid-column-start: span 4;
-  grid-column-end: span 4;
-  grid-row-start: span 2;
-  grid-row-end: span 2;
+  grid-column: span 4;
+  grid-row: span 2;
   position: relative;
   display: flex;
   overflow: hidden;
@@ -206,6 +227,7 @@ ul li:hover a span:nth-child(2) {
   -ms-border-radius: 1rem;
   -o-border-radius: 1rem;
 }
+
 .work-frame-wide {
   position: relative;
   display: flex;
@@ -215,6 +237,7 @@ ul li:hover a span:nth-child(2) {
   justify-content: center;
   align-items: center;
 }
+
 .work-title-wrap {
   position: relative;
   z-index: 100;
@@ -225,12 +248,14 @@ ul li:hover a span:nth-child(2) {
   align-items: flex-start;
   align-self: flex-start;
 }
+
 .work-title-wrap h2 {
   font-size: 1.625rem;
   font-weight: 700;
   line-height: 2rem;
   margin-bottom: 0.25rem;
 }
+
 .work-tag {
   font-size: 10px;
   font-weight: 600;
@@ -246,23 +271,20 @@ ul li:hover a span:nth-child(2) {
   background-color: #121517;
   color: #edeef0;
 }
+
 .tu1estilo-image {
   position: absolute;
   left: auto;
   top: auto;
   width: 100%;
 }
+
 /* Slider */
 .slider {
-  position: relative;
-  grid-row-start: span 2;
-  grid-row-end: span 2;
-  grid-column-start: span 4;
-  grid-column-end: span 4;
+  grid-row: span 3;
+  grid-column: span 4;
   display: flex;
   overflow: hidden;
-  flex-direction: column;
-  align-items: stretch;
   background-color: #d4cfc8;
   border-radius: 1rem;
   -webkit-border-radius: 16px;
@@ -270,29 +292,28 @@ ul li:hover a span:nth-child(2) {
   -ms-border-radius: 16px;
   -o-border-radius: 16px;
 }
-/* Carrousel */
-.slider-card {
-  display: flex;
+
+.slider .swiper {
+  width: 100%;
   height: 100%;
-  width: 400%;
+  position: relative;
 }
-/* Grande */
-.slide {
-  width: 400%;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: center;
-  transition: all 0.5s ease;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
+
+.slider .swiper-slide {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
-.slider-card img {
+
+.slider .swiper img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  width: calc(400% / 4);
 }
+
 .slider-indicator,
 .dots {
   display: flex;
@@ -310,6 +331,7 @@ ul li:hover a span:nth-child(2) {
   text-align: center;
   -webkit-tap-highlight-color: transparent;
 }
+
 .slider-dot {
   display: inline-block;
   background: rgba(0, 0, 0, 0.3);
@@ -325,12 +347,15 @@ ul li:hover a span:nth-child(2) {
   -ms-border-radius: 100px;
   -o-border-radius: 100px;
 }
+
 .slider-dot.active {
   background-color: white;
 }
+
 .slider-dot:hover {
   background-color: rgba(255, 255, 255, 0.4);
 }
+
 /* Footer */
 .contact-card {
   position: relative;
@@ -350,29 +375,37 @@ ul li:hover a span:nth-child(2) {
   -ms-border-radius: 1rem;
   -o-border-radius: 1rem;
 }
+
 .contact-card h1 {
   font-size: 2.25rem;
   text-decoration: underline;
 }
+
 .contact-block {
   width: 17.5rem;
   display: flex;
   justify-content: space-between;
 }
+
 .contact-block h5 {
   font-size: 0.88rem;
 }
+
 .contact-social-icon {
   font-size: 1.75rem;
   color: #121517;
 }
+
 .contact-social-icon:hover {
   color: #e97446;
 }
+
 .button-menu {
   display: none;
 }
+
 .btn-primary {
+  display: inline-block;
   cursor: pointer;
   border: none;
   padding: 0.9375rem 1.9375rem;
@@ -383,6 +416,7 @@ ul li:hover a span:nth-child(2) {
   color: white;
   font-weight: 600;
   font-size: 1rem;
+  text-align: center;
   border-radius: 2rem;
   -webkit-border-radius: 32px;
   -moz-border-radius: 32px;
@@ -394,11 +428,13 @@ ul li:hover a span:nth-child(2) {
   -ms-transition: all .3s ease;
   -o-transition: all .3s ease;
 }
+
 .btn-primary:hover {
   background-color: transparent;
   border: 2px solid #121517;
   color: #121517;
 }
+
 .button-external-site {
   z-index: 1000;
   font-size: 1rem;
@@ -418,10 +454,12 @@ ul li:hover a span:nth-child(2) {
   -ms-border-radius: 2rem;
   -o-border-radius: 2rem;
 }
+
 .button-external-site:hover {
   background-color: black;
   color: white;
 }
+
 .arrow-external-site {
   width: 35px;
   height: 35px;
@@ -432,11 +470,10 @@ ul li:hover a span:nth-child(2) {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
+
 .small-card {
-  grid-row-start: span 1;
-  grid-row-end: span 1;
-  grid-column-start: span 2;
-  grid-column-end: span 2;
+  grid-row: span 1;
+  grid-column: span 2;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -450,15 +487,12 @@ ul li:hover a span:nth-child(2) {
 }
 
 .tu1ahorro-card {
-  grid-row-start: span 2;
-  grid-row-end: span 2;
-  grid-column-start: span 2;
-  grid-column-end: span 2;
+  grid-row: span 2;
+  grid-column: span 2;
   display: flex;
   position: relative;
   flex-direction: column;
   align-items: stretch;
-  /* background-color: #ff8089; */
   background-color: #e2bb5d;
   color: white;
   background-position: center;
@@ -475,14 +509,12 @@ ul li:hover a span:nth-child(2) {
   -ms-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
 }
+
 .testimonial-card {
-  grid-row-start: span 2;
-  grid-row-end: span 2;
-  grid-column-start: span 2;
-  grid-column-end: span 2;
+  grid-row: span 2;
+  grid-column: span 2;
   padding: 3rem;
   position: relative;
-  background-color: #7380ec;
   overflow: hidden;
   border-radius: 1rem;
   -webkit-border-radius: 1rem;
@@ -490,6 +522,7 @@ ul li:hover a span:nth-child(2) {
   -ms-border-radius: 1rem;
   -o-border-radius: 1rem;
 }
+
 .work-title-wrap-2 {
   position: relative;
   z-index: 100;
@@ -499,6 +532,7 @@ ul li:hover a span:nth-child(2) {
   flex-direction: column;
   align-items: flex-start;
 }
+
 .work-title-wrap-2 h2 {
   font-size: 1.625rem;
   line-height: 2rem;
@@ -527,6 +561,7 @@ ul li:hover a span:nth-child(2) {
   -ms-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
 }
+
 .tu1ahorro-image:hover {
   transform: scale(1.05);
   -webkit-transform: scale(1.05);
@@ -568,12 +603,13 @@ ul li:hover a span:nth-child(2) {
   margin: 0 auto;
   max-width: 1600px;
 }
+
 .hero-about {
   grid-gap: 2rem;
   grid-template-columns: repeat(2, 1fr);
   display: grid;
-  /* grid-gap: 3rem; */
 }
+
 .hero-column,
 .hero-column-right {
   display: flex;
@@ -581,6 +617,7 @@ ul li:hover a span:nth-child(2) {
   position: relative;
   justify-content: space-between;
 }
+
 .hero-column-right {
   padding: 3rem;
   background-color: white;
@@ -591,13 +628,16 @@ ul li:hover a span:nth-child(2) {
   -ms-border-radius: 1rem;
   -o-border-radius: 1rem;
 }
+
 .hero-column-right h1 {
   font-size: calc(40px + 4vw) !important;
   line-height: 1.2;
 }
+
 .hero-column-right p {
   width: 90%;
 }
+
 .hero-custom {
   overflow: hidden;
   height: 100%;
@@ -607,6 +647,7 @@ ul li:hover a span:nth-child(2) {
   -ms-border-radius: 1rem;
   -o-border-radius: 1rem;
 }
+
 .wrapper-list {
   font-size: 2rem;
   font-weight: 700;
@@ -614,7 +655,9 @@ ul li:hover a span:nth-child(2) {
   margin-bottom: 1rem;
   margin-left: 2.75rem;
   list-style-type: "👉";
+  padding-left: .5rem;
 }
+
 .wrapper-list:last-child {
   margin-bottom: 0;
 }
@@ -671,9 +714,11 @@ ul li:hover a span:nth-child(2) {
   width: 100%;
   flex-wrap: wrap;
 }
+
 .d-flex {
   display: flex;
 }
+
 .lenguaje-button {
   width: 2.875rem;
   height: 2.875rem;
@@ -707,10 +752,12 @@ ul li:hover a span:nth-child(2) {
   -ms-border-radius: 2rem;
   -o-border-radius: 2rem;
 }
+
 .button:hover,
 .button:focus {
   background-color: black;
 }
+
 .floating-button {
   position: absolute;
   top: 1.5rem;
@@ -734,7 +781,7 @@ ul li:hover a span:nth-child(2) {
   color: #121517;
 }
 
-.navigation-marquee{
+.navigation-marquee {
   display: none;
   font-size: 8rem;
   text-transform: uppercase;
@@ -749,14 +796,15 @@ ul li:hover a span:nth-child(2) {
 }
 
 @keyframes move-right {
-  0%{
+  0% {
     transform: translateX(0);
     -webkit-transform: translateX(0);
     -moz-transform: translateX(0);
     -ms-transform: translateX(0);
     -o-transform: translateX(0);
   }
-  100%{
+
+  100% {
     transform: translateX(-100%);
     -webkit-transform: translateX(-100%);
     -moz-transform: translateX(-100%);
@@ -766,17 +814,21 @@ ul li:hover a span:nth-child(2) {
 }
 
 /* MEDIA QUERIES  */
-@media screen and (min-width: 1920px){
+@media screen and (min-width: 1920px) {
   .hero-column-right h1 {
     font-size: calc(40px + 3vw) !important;
     line-height: 1.2;
   }
 }
+
 @media screen and (min-width: 769px) {
-  .hero-column, .hero-column-right{
+
+  .hero-column,
+  .hero-column-right {
     max-height: 90vh;
   }
 }
+
 @media screen and (max-width: 768px) {
   .page-grid {
     width: 90%;
@@ -788,64 +840,69 @@ ul li:hover a span:nth-child(2) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto;
   }
+
   .hero-card,
   .small-card,
   .tu1ahorro-card,
   .testimonial-card {
     flex-direction: column;
-    grid-column-start: span 4;
-    grid-column-end: span 4;
-    grid-row-start: span 1;
-    grid-row-end: span 1;
+    grid-column: span 4;
+    grid-row: span 1;
   }
+
   .tu1estilo-card {
-    grid-column-start: span 4;
-    grid-column-end: span 4;
-    grid-row-start: span 2;
-    grid-row-end: span 2;
+    grid-column: span 4;
+    grid-row: span 2;
   }
+
   .hero-content,
   .small-card,
   .testimonial-card,
   .work-frame-wide {
     padding: 2.75rem;
   }
+
   .hero-right {
     grid-column-start: span 4;
   }
+
   .hero-image {
-    width: 85%;
+    width: 87%;
   }
+
   .tu1estilo-image {
     top: 0;
   }
+
   .work-frame-wide {
     justify-content: flex-end;
   }
+
   .work-title-wrap,
   .work-title-wrap-2 {
     width: 100%;
   }
-  .slider-dot:hover {
-    background-color: white;
+
+  .slider {
+    grid-row: span 2;
   }
+
   .button-menu {
     display: block;
     z-index: 501;
   }
+
   header {
     flex-flow: row wrap;
     padding: 1.25rem 3rem;
   }
+
   header ul {
     flex-direction: column;
     position: fixed;
     width: 100%;
     min-height: 100vh;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    inset: 0;
     padding: 3rem;
     justify-content: flex-end;
     align-items: flex-start;
@@ -861,6 +918,7 @@ ul li:hover a span:nth-child(2) {
     -ms-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
   }
+
   header ul.activo {
     transform: translateY(0);
     -webkit-transform: translateY(0);
@@ -868,14 +926,17 @@ ul li:hover a span:nth-child(2) {
     -ms-transform: translateY(0);
     -o-transform: translateY(0);
   }
+
   header ul li {
     margin: 1rem 0;
   }
+
   header ul li a {
     font-size: 2.125rem;
     height: 2.5rem;
     margin: 0;
   }
+
   .btn15 {
     position: absolute;
     width: 3.75rem;
@@ -883,6 +944,7 @@ ul li:hover a span:nth-child(2) {
     right: 2rem;
     transition-duration: 0.5s;
   }
+
   .btn15 .icon {
     transition-duration: 0.5s;
     position: absolute;
@@ -893,6 +955,7 @@ ul li:hover a span:nth-child(2) {
     border-radius: 4px;
     left: 15px;
   }
+
   .btn15 .icon:before {
     transition-duration: 0.5s;
     position: absolute;
@@ -903,6 +966,7 @@ ul li:hover a span:nth-child(2) {
     top: -10px;
     border-radius: 4px;
   }
+
   .btn15 .icon:after {
     transition-duration: 0.5s;
     position: absolute;
@@ -913,29 +977,36 @@ ul li:hover a span:nth-child(2) {
     top: 10px;
     border-radius: 4px;
   }
+
   .btn15.activo .icon {
     transition-duration: 0.5s;
     background: transparent;
   }
+
   .btn15.activo .icon:before {
     transform: rotateZ(45deg) scaleX(1.25) translate(6.5px, 6.5px);
   }
+
   .btn15.activo .icon:after {
     transform: rotateZ(-45deg) scaleX(1.25) translate(6px, -6px);
   }
+
   .section-top {
     grid-column-start: span 4;
     grid-column-end: span 4;
     grid-row-start: span 3;
     grid-row-end: span 3;
   }
+
   .hero-about {
     grid-template-columns: 1fr;
   }
+
   .hero-column p {
     width: 100%;
     margin-bottom: 1rem;
   }
+
   .carousel {
     border-radius: 1rem;
     -webkit-border-radius: 1rem;
@@ -943,16 +1014,20 @@ ul li:hover a span:nth-child(2) {
     -ms-border-radius: 1rem;
     -o-border-radius: 1rem;
   }
+
   .lenguaje-button {
     margin-left: 1px;
   }
+
   .wrapper {
     margin-top: 1rem;
   }
+
   .testimonial-card {
     min-height: 38rem;
   }
-  .navigation-marquee{
+
+  .navigation-marquee {
     display: block;
   }
 }
